Beautiful limiting of acceleration

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <script src="build/phaser.js"></script>
         <script src="Rob.js"></script>
+        <script src="Angles.js"></script>
         <script src="Bitmap.js"></script>
+        <script src="Mover.js"></script>
     </body>
 </html>
