XY is a factory object now

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <script src="Angles.js"></script>
         <script src="Bitmap.js"></script>
         <script src="Mover.js"></script>
+        <script src="XY.js"></script>
     </body>
 </html>
