Stink spreads pretty well

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="Angles.js"></script>
         <script src="Bitmap.js"></script>
         <script src="Mover.js"></script>
+        <script src="Spreader.js"></script>
         <script src="XY.js"></script>
     </body>
 </html>
