It's too special-purpose to be called an emitter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="Rob.js"></script>
         <script src="Angles.js"></script>
         <script src="Bitmap.js"></script>
-        <script src="Emitter.js"></script>
+        <script src="MannaGenerator.js"></script>
         <script src="Mover.js"></script>
         <script src="Spreader.js"></script>
         <script src="XY.js"></script>
