Sun was surprisingly easy. Garden likes it too.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="MannaGenerator.js"></script>
         <script src="Mover.js"></script>
         <script src="Spreader.js"></script>
+        <script src="Sun.js"></script>
         <script src="XY.js"></script>
     </body>
 </html>
