Range object; might be simpler than I thought

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
         <script src="Mover.js"></script>
+        <script src="Range.js"></script>
         <script src="Spreader.js"></script>
         <script src="Sun.js"></script>
         <script src="XY.js"></script>
