--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="Rob.js"></script>
         <script src="Angles.js"></script>
         <script src="Bitmap.js"></script>
+        <script src="DNA.js"></script>
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
         <script src="Mover.js"></script>
