--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <script src="build/phaser.js"></script>
         <script src="Rob.js"></script>
         <script src="Angles.js"></script>
+        <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
         <script src="DNA.js"></script>
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
+        <script src="Metabolism.js"></script>
         <script src="Mover.js"></script>
         <script src="Range.js"></script>
         <script src="Spreader.js"></script>
