Lizer in place, but everything is a mess at the moment

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
         <script src="DNA.js"></script>
+        <script src="Lizer.js"></script>
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
-        <script src="Metabolism.js"></script>
         <script src="Mover.js"></script>
         <script src="Range.js"></script>
         <script src="Spreader.js"></script>
