Factoring out a Motioner class

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="Lizer.js"></script>
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
+        <script src="Motioner.js"></script>
         <script src="Mover.js"></script>
         <script src="Range.js"></script>
         <script src="Spreader.js"></script>
