Fixed the scaling bug that was causing sprites to jump off the screen while eating

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="Motioners/Motioner-separateXY.js"></script>
         <script src="Mover.js"></script>
         <script src="Range.js"></script>
+        <script src="RobLog.js"></script>
         <script src="Spreader.js"></script>
         <script src="Sun.js"></script>
         <script src="XY.js"></script>
