--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <script src="build/phaser.js"></script>
+        <script src="tinycolor.js"></script>
         <script src="Rob.js"></script>
         <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
