Temper seems to be a success

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script src="RobLog.js"></script>
         <script src="Spreader.js"></script>
         <script src="Sun.js"></script>
+        <script src="Temper.js"></script>
         <script src="XY.js"></script>
     </body>
 </html>
