Checkpoint; tired of having to start over

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="build/phaser.js"></script>
         <script src="tinycolor.js"></script>
         <script src="Rob.js"></script>
+        <script src="Accel.js"></script>
         <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
         <script src="DNA.js"></script>
