Factored the Locator out of the Motioner

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="Bitmap.js"></script>
         <script src="DNA.js"></script>
         <script src="Lizer.js"></script>
+        <script src="Locator.js"></script>
         <script src="MannaGarden.js"></script>
         <script src="MannaGenerator.js"></script>
         <script src="Motioners/Motioner-vectors.js"></script>
