Checkpoint; I can't believe it works as well as it does

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="tinycolor.js"></script>
         <script src="Rob.js"></script>
         <script src="Accel.js"></script>
+        <script src="Archon.js"></script>
         <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
         <script src="DNA.js"></script>
@@ -18,6 +19,7 @@
         <script src="MannaGenerator.js"></script>
         <script src="Motioners/Motioner-vectors.js"></script>
         <script src="Mover.js"></script>
+        <script src="Parasite.js"></script>
         <script src="Range.js"></script>
         <script src="RobLog.js"></script>
         <script src="Spreader.js"></script>
