Reporting mechanism in place

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="Mover.js"></script>
         <script src="Parasite.js"></script>
         <script src="Range.js"></script>
+        <script src="Report.js"></script>
         <script src="RobLog.js"></script>
         <script src="Spreader.js"></script>
         <script src="Sun.js"></script>
