--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="Archon.js"></script>
         <script src="Archons.js"></script>
         <script src="Bitmap.js"></script>
+        <script src="FamilyTree.js"></script>
         <script src="Genomer.js"></script>
         <script src="Lizer.js"></script>
         <script src="Locator.js"></script>
